2008-06-08  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c: (evil_last_error_get):
	add evil_last_error_get() function to get
	useful error string creation.

	* src/lib/dlfcn/dlfcn.c: (get_last_error), (dlopen), (dlsym),
	(dladdr):
	use UNICODE check instead of compiler checks when needed.
	use evil_last_error_get()

	* src/lib/mman/mman.c: (mmap), (munmap):
	file mapping does not work on Windows CE < 5.0.
	if it is the case, just read the file and return
	the data.
	use evil_last_error_get()

	* src/lib/mman/Makefile.am:
	* src/lib/Makefile.am:
	add libevil dependancy

2008-06-07  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	include windows.h instead of windef.h
	undefine PATH_MATH before defining it

	* src/lib/dlfcn/dlfcn.c:
	remove useless header file

2008-06-06  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	add PATH_MAX macro

	* src/lib/dlfcn/dlfcn.c: (get_last_error):
	free correctly strings

2008-06-02  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c: (setenv), (unsetenv):
	setenv and unsetenv are already defined with cegcc

2008-06-01  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c:
	add open with several arguments
	add getcwd, lstat, setenv, unsetenv and evil_homedir_get.
	typo in doc

2008-06-01  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c:
	memory leak with cegcc

	* src/lib/dlfcn/dlfcn.h:
	include limits.h for MinGW users

	* src/lib/mman/sys/mman.h:
	add MAP_FAILED error value

2008-05-20  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.h:
	dli_fname ncorrectly declared. Thanks to Dmitriy Mazovka.

2008-05-11  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c (getpid):
	add wrapper around GetCurrentProcessId()

2008-05-10  Vincent Torri  <doursse at users dot sf dot net>
